--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "strict": false
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
